[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnafoldscore"
version = "0.1.0"
description = "Distance-based statistical potential for RNA folding (C3')"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]